--- a/.github/workflows/operator-verify.yaml
+++ b/.github/workflows/operator-verify.yaml
@@ -33,6 +33,42 @@ jobs:
       - name: run test
         run: make -C components/operator test
 
+  operator-integration-test:
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.SETUP_GO_VERSION }}
+      - name: create single cluster
+        uses: AbsaOSS/k3d-action@4e8b3239042be1dc0aed6c5eb80c13b18200fc79 #v2.4.0
+        with:
+          cluster-name: "k3dCluster"
+          args: >-
+            --agents 1
+            --image rancher/k3s:v1.29.3-k3s1
+            --port 80:80@loadbalancer
+            --port 443:443@loadbalancer
+            --wait
+      - name: run integration test (pre)
+        if: github.event_name == 'pull_request'
+        run: |
+          make -C components/operator deploy
+          make -C tests/operator test
+        env:
+          IMG: europe-docker.pkg.dev/kyma-project/dev/dockerregisty-operator:PR-${{ github.event.number }}
+      - name: run integration test (post)
+        if: github.event_name == 'push'
+        run: |
+          make -C components/operator deploy
+          make -C tests/operator test
+        env:
+          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
+      - name: collect cluster-info
+        if: ${{ always() }}
+        run: make -C tests/operator cluster-info
+
 
 #  upgrade-test: //TODO: change it to run dockerregistry verify (need to be implemented)
 #    runs-on: ubuntu-latest
