--- a/config/docker-registry/Chart.yaml
+++ b/config/docker-registry/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 description: Kyma component 'docker registry'
 name: docker-registry
-version: 1.0.0
+version: 1.9.1
+appVersion: 2.7.1
 home: https://kyma-project.io
 icon: https://github.com/kyma-project/kyma/blob/main/logo.png?raw=true
 dependencies:
