--- a/.github/workflows/operator-verify.yaml
+++ b/.github/workflows/operator-verify.yaml
@@ -70,49 +70,63 @@ jobs:
         run: make -C tests/operator cluster-info
 
 
-#  upgrade-test: //TODO: change it to run dockerregistry verify (need to be implemented)
-#    runs-on: ubuntu-latest
-#    if: github.event_name == 'push'
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: create single cluster
-#        uses: AbsaOSS/k3d-action@4e8b3239042be1dc0aed6c5eb80c13b18200fc79 #v2.4.0
-#        with:
-#          cluster-name: "k3dCluster"
-#          args: >-
-#            --agents 1
-#            --image rancher/k3s:v1.28.6-k3s1
-#            --port 80:80@loadbalancer
-#            --port 443:443@loadbalancer
-#            --wait
-#      - name: upgrade test
-#        run: make -C hack upgrade-test
-#        env:
-#          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
+  operator-upgrade-test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.SETUP_GO_VERSION }}
+      - name: create single cluster
+        uses: AbsaOSS/k3d-action@4e8b3239042be1dc0aed6c5eb80c13b18200fc79 #v2.4.0
+        with:
+          cluster-name: "k3dCluster"
+          args: >-
+            --agents 1
+            --image rancher/k3s:v1.29.3-k3s1
+            --port 80:80@loadbalancer
+            --port 443:443@loadbalancer
+            --wait
+      - name: upgrade test
+        run: |
+          make -C components/operator deploy-release
+          make -C tests/operator test
+          make -C components/operator deploy
+          make -C tests/operator test
+        env:
+          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
+      - name: collect cluster-info
+        if: ${{ always() }}
+        run: make -C tests/operator cluster-info
 
-#  gardener-integration-test: //TODO: change it to run dockerregistry verify (need to be implemented)
-#    if: github.event_name == 'push'
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v4
-#    - name: save sa
-#      shell: bash
-#      run: 'echo "$GARDENER_SA" > /tmp/gardener-sa.yaml'
-#      env:
-#        GARDENER_SA: ${{ secrets.GARDENER_SA }}
-#    - name: provision gardener
-#      run: make -C hack  provision-gardener
-#      env:
-#        GARDENER_SECRET_NAME: ${{ secrets.GARDENER_SECRET_NAME }}
-#        GARDENER_PROJECT: ${{ secrets.GARDENER_PROJECT }}
-#        GARDENER_SA_PATH: /tmp/gardener-sa.yaml
-#    - name: run test
-#      run: make -C hack integration-test-on-cluster
-#      env:
-#        IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
-#    - name: deprovision gardener
-##      https://docs.github.com/en/actions/learn-github-actions/expressions#always
-#      if: ${{ always() }}
-#      run: make -C hack deprovision-gardener
-#      env:
-#        GARDENER_SA_PATH: /tmp/gardener-sa.yaml
+  gardener-integration-test:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.SETUP_GO_VERSION }}
+      - name: save sa
+        shell: bash
+        run: 'echo "$GARDENER_SA" > /tmp/gardener-sa.yaml'
+        env:
+          GARDENER_SA: ${{ secrets.GARDENER_SA }}
+      - name: provision gardener
+        run: make -C hack provision-gardener
+        env:
+          GARDENER_SECRET_NAME: ${{ secrets.GARDENER_SECRET_NAME }}
+          GARDENER_PROJECT: ${{ secrets.GARDENER_PROJECT }}
+          GARDENER_SA_PATH: /tmp/gardener-sa.yaml
+      - name: run test
+        run: |
+          make -C components/operator deploy
+          make -C tests/operator test
+        env:
+          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
+      - name: deprovision gardener
+        if: ${{ always() }}
+        run: make -C hack deprovision-gardener
+        env:
+          GARDENER_SA_PATH: /tmp/gardener-sa.yaml
