--- a/config/docker-registry/templates/registry-config.yaml
+++ b/config/docker-registry/templates/registry-config.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/dockerconfigjson
 metadata:
-  name: internal-dockerregistry-config
+  name: dockerregistry-config
   namespace: {{ .Release.Namespace }}
   labels:
     dockerregistry.kyma-project.io/config: credentials
