Adjust operator-verify

--- a/.github/workflows/operator-verify.yaml
+++ b/.github/workflows/operator-verify.yaml
@@ -55,6 +55,7 @@ jobs:
         if: github.event_name == 'pull_request'
         run: |
           make -C components/operator deploy
+          make -C components/operator install-operator-k3d
           make -C tests/operator test
         env:
           IMG: europe-docker.pkg.dev/kyma-project/dev/dockerregisty-operator:PR-${{ github.event.number }}
