--- a/config/operator/base/deployment/kustomization.yaml
+++ b/config/operator/base/deployment/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: dockerregistry-operator
-  newTag: 2d332b272e2a
+  newName: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator
+  newTag: main
