--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -2,7 +2,8 @@ module-name: docker-registry
 rc-tag: 1.4.0
 protecode:
   - europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:main
-  - europe-docker.pkg.dev/kyma-project/prod/tpi/registry:2.8.1-1ae4c190
+  - europe-docker.pkg.dev/kyma-project/prod/external/registry:2.8.3
+  - europe-docker.pkg.dev/kyma-project/prod/registry-init:v20240506-57d31b1d
 whitesource:
   language: golang-mod
   subprojects: false
