--- a/config/docker-registry/charts/docker-registry/templates/deployment.yaml
+++ b/config/docker-registry/charts/docker-registry/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
       hostIPC: false # Optional. The default is false if the entry is not there.
       initContainers:
         - name: generate-htpasswd
-          image: "{{ include "imageurl" (dict "reg" .Values.global.containerRegistry "img" .Values.global.images.registry-init) }}"
+          image: "{{ include "imageurl" (dict "reg" .Values.global.containerRegistry "img" .Values.global.images.registry_init) }}"
 {{- if .Values.initContainers.securityContext }}
           securityContext:
             {{- include "tplValue" ( dict "value" .Values.initContainers.securityContext "context" . ) | nindent 12 }}
