--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -13,7 +13,7 @@ global:
       name: "registry"
       version: "2.8.3"
       directory: "prod/external"
-    registry-init:
+    registry_init:
       name: "registry-init"
       version: "v20240506-57d31b1d"
       directory: "prod"
