remove globals from values.yaml

--- a/config/docker-registry/templates/service.yaml
+++ b/config/docker-registry/templates/service.yaml
@@ -15,11 +15,11 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: {{ .Values.global.registryServicePort }}
+    - port: {{ .Values.service.port }}
       protocol: TCP
       name: http-{{ .Values.service.name }}
-      targetPort: {{ .Values.global.registryServicePort }}
-      nodePort: {{ .Values.global.registryNodePort }}
+      targetPort: {{ .Values.service.port }}
+      nodePort: {{ .Values.registryNodePort }}
   selector:
     app: {{ template "docker-registry.name" . }}
     release: {{ .Release.Name }}
