--- a/config/docker-registry/templates/deployment.yaml
+++ b/config/docker-registry/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
       imagePullSecrets:
 {{ toYaml .Values.imagePullSecrets | indent 8 }}
       {{- end }}
-      priorityClassName: "{{ .Values.global.dockerregistryPriorityClassName }}"
+      priorityClassName: "{{ .Values.dockerregistryPriorityClassName }}"
 {{- if .Values.pod.securityContext }}
       securityContext:
         {{- include "tplValue" ( dict "value" .Values.pod.securityContext "context" . ) | nindent 12 }}
@@ -47,7 +47,7 @@ spec:
       hostIPC: false # Optional. The default is false if the entry is not there.
       initContainers:
         - name: generate-htpasswd
-          image: "{{ include "imageurl" (dict "reg" .Values.global.containerRegistry "img" .Values.global.images.registry_init) }}"
+          image: "{{ include "imageurl" (dict "reg" .Values.containerRegistry "img" .Values.images.registry_init) }}"
 {{- if .Values.initContainers.securityContext }}
           securityContext:
             {{- include "tplValue" ( dict "value" .Values.initContainers.securityContext "context" . ) | nindent 12 }}
@@ -75,7 +75,7 @@ spec:
 
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ include "imageurl" (dict "reg" .Values.global.containerRegistry "img" .Values.global.images.registry) }}"
+          image: "{{ include "imageurl" (dict "reg" .Values.containerRegistry "img" .Values.images.registry) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
 {{- if .Values.containers.securityContext }}
           securityContext:
