--- a/config/docker-registry/values.yaml
+++ b/config/docker-registry/values.yaml
@@ -2,22 +2,20 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-global:
-  registryServicePort: 5000
-  registryNodePort: 32137
-  containerRegistry:
-    path: europe-docker.pkg.dev/kyma-project
-  images:
-    registry:
-      name: "registry"
-      version: "2.8.3"
-      directory: "prod/external"
-    registry_init:
-      name: "registry-init"
-      version: "v20240506-57d31b1d"
-      directory: "prod"
-  dockerregistryPriorityClassValue: 2000000
-  dockerregistryPriorityClassName: "dockerregistry-priority"
+registryNodePort: 32137
+containerRegistry:
+  path: europe-docker.pkg.dev/kyma-project
+images:
+  registry:
+    name: "registry"
+    version: "2.8.3"
+    directory: "prod/external"
+  registry_init:
+    name: "registry-init"
+    version: "v20240506-57d31b1d"
+    directory: "prod"
+dockerregistryPriorityClassValue: 2000000
+dockerregistryPriorityClassName: "dockerregistry-priority"
 
 dockerRegistry:
   username: "{{ randAlphaNum 20 | b64enc }}" # for gcr "_json_key"
@@ -40,7 +38,7 @@ image:
     # - name: docker
 service:
   name: registry
-  port: "{{ .Values.global.registryServicePort }}"    # same as configData.http.addr
+  port: "5000"    # same as configData.http.addr
   annotations: {}
 ingress:
   enabled: false
