unify gh workflow names

--- a/.github/workflows/operator-verify.yaml
+++ b/.github/workflows/operator-verify.yaml
@@ -1,4 +1,4 @@
-name: Operator verify
+name: operator verify
 
 on:
   push:
@@ -7,12 +7,7 @@ on:
     paths-ignore:
       - 'docs/**'
       - 'examples/**'
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
-      - converted_to_draft
+    types: [opened, reopened, synchronize, ready_for_review, converted_to_draft]
 
 jobs:
   lint:
