--- a/.github/workflows/operator-verify.yaml
+++ b/.github/workflows/operator-verify.yaml
@@ -36,19 +36,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/rebase
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.SETUP_GO_VERSION }}
-      - name: create single cluster
-        uses: AbsaOSS/k3d-action@4e8b3239042be1dc0aed6c5eb80c13b18200fc79 #v2.4.0
-        with:
-          cluster-name: "k3dCluster"
-          args: >-
-            --agents 1
-            --image rancher/k3s:v1.29.3-k3s1
-            --port 80:80@loadbalancer
-            --port 443:443@loadbalancer
-            --wait
       - name: run integration test (pre)
         if: github.event_name == 'pull_request'
         run: |
@@ -63,9 +50,7 @@ jobs:
           make -C tests/operator test
         env:
           IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
-      - name: collect cluster-info
-        if: ${{ always() }}
-        run: make -C tests/operator cluster-info
+      - uses: ./.github/actions/collect-cluster-info
 
 #TODO: after the first release bring this test back with deploy-release target
 #  operator-upgrade-test:
@@ -73,19 +58,8 @@ jobs:
 #    if: github.event_name == 'push'
 #    steps:
 #      - uses: actions/checkout@v4
-#      - uses: actions/setup-go@v5
-#        with:
-#          go-version: ${{ env.SETUP_GO_VERSION }}
-#      - name: create single cluster
-#        uses: AbsaOSS/k3d-action@4e8b3239042be1dc0aed6c5eb80c13b18200fc79 #v2.4.0
-#        with:
-#          cluster-name: "k3dCluster"
-#          args: >-
-#            --agents 1
-#            --image rancher/k3s:v1.29.3-k3s1
-#            --port 80:80@loadbalancer
-#            --port 443:443@loadbalancer
-#            --wait
+#      - uses: ./.github/actions/setup-go
+#      - uses: ./.github/actions/create-single-cluster
 #      - name: upgrade test
 #        run: |
 #          make -C components/operator deploy-release
@@ -94,19 +68,15 @@ jobs:
 #          make -C tests/operator test
 #        env:
 #          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
-#      - name: collect cluster-info
-#        if: ${{ always() }}
-#        run: make -C tests/operator cluster-info
+#      - uses: ./.github/actions/collect-cluster-info
 
   gardener-integration-test:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.SETUP_GO_VERSION }}
-      - name: save sa
+      - uses: ./.github/actions/setup-go
+      - name: save service-account
         shell: bash
         run: 'echo "$GARDENER_SA" > /tmp/gardener-sa.yaml'
         env:
