--- a/.github/workflows/markdown.yaml
+++ b/.github/workflows/markdown.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: ./.github/actions/rebase
 #      - uses: gaurav-nelson/github-action-markdown-link-check@v1 //TODO: after adjusting *.md bring the test back
 #        with:
 #          use-quiet-mode: 'yes'
