--- a/.github/workflows/upgrade-tests.yaml
+++ b/.github/workflows/upgrade-tests.yaml
@@ -11,7 +11,7 @@ jobs:
 #    steps:
 #      - uses: actions/checkout@v4
 #      - uses: ./.github/actions/setup-go
-#      - uses: ./.github/actions/create-single-cluster
+#      - uses: ./.github/actions/create-k3d-cluster
 #      - name: upgrade test
 #        run: |
 #          make -C components/operator deploy-release
@@ -20,4 +20,6 @@ jobs:
 #          make -C tests/operator test
 #        env:
 #          IMG: europe-docker.pkg.dev/kyma-project/prod/dockerregistry-operator:${{ github.sha }}
-#      - uses: ./.github/actions/collect-cluster-info
+#      - if: ${{ always() }}
+#        uses: ./.github/actions/collect-cluster-info
+
