--- a/.github/workflows/markdown.yaml
+++ b/.github/workflows/markdown.yaml
@@ -1,19 +1,22 @@
 name: markdown
 run-name: ${{github.event.pull_request.title}}
 on:
+  workflow_dispatch:
+  push:
+    branches: [ "main", "release-*" ]
   schedule:
     - cron: "0 5 * * *" # Run everyday at 5:00 AM
-  pull_request:
+
 jobs:
   link-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/rebase
-#      - uses: gaurav-nelson/github-action-markdown-link-check@v1 //TODO: after adjusting *.md bring the test back
-#        with:
-#          use-quiet-mode: 'yes'
-#          use-verbose-mode: 'yes'
-#          config-file: '.mlc.config.json'
-#          folder-path: '.'
-#          max-depth: -1
+      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          use-quiet-mode: 'yes'
+          use-verbose-mode: 'yes'
+          config-file: '.mlc.config.json'
+          folder-path: '.'
+          max-depth: -1
