--- a/hack/shoot_template.yaml
+++ b/hack/shoot_template.yaml
@@ -33,7 +33,9 @@ spec:
   kubernetes:
     version: "${GARDENER_K8S_VERSION}"
   hibernation:
-    enabled: true
     schedules:
       - start: "00 14 * * ?"
         location: "Europe/Berlin"
+  addons:
+    nginxIngress:
+      enabled: false
