--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -59,6 +59,27 @@ spec:
                 description: Sets the timeout for the Function health check. The default
                   value in seconds is `10`
                 type: string
+              storage:
+                properties:
+                  azure:
+                    properties:
+                      secrets:
+                        properties:
+                          accountKey:
+                            type: string
+                          accountName:
+                            type: string
+                          container:
+                            type: string
+                        required:
+                        - accountKey
+                        - accountName
+                        - container
+                        type: object
+                    required:
+                    - secrets
+                    type: object
+                type: object
             type: object
           status:
             properties:
@@ -154,6 +175,8 @@ spec:
                 - Ready
                 - Error
                 - Warning
+                type: string
+              storage:
                 type: string
             required:
             - served
