add s3 to CR config

--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -68,6 +68,24 @@ spec:
                     required:
                     - secretName
                     type: object
+                  s3:
+                    properties:
+                      bucket:
+                        type: string
+                      encrypt:
+                        type: boolean
+                      region:
+                        type: string
+                      regionEndpoint:
+                        type: string
+                      secretName:
+                        type: string
+                      secure:
+                        type: boolean
+                    required:
+                    - bucket
+                    - region
+                    type: object
                 type: object
             type: object
           status:
