--- a/examples/storage-azure/default-dockerregistry-cr-azure.yaml
+++ b/examples/storage-azure/default-dockerregistry-cr-azure.yaml
@@ -4,8 +4,9 @@ metadata:
   name: default
   namespace: kyma-system
 spec:
-  azure:
-    secrets:
-      accountKey: "accountKey"
-      accountName: "accountName"
-      container: "container"
+  storage:
+    azure:
+      secrets:
+        accountKey: "accountKey"
+        accountName: "accountName"
+        container: "container"
