--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -63,21 +63,10 @@ spec:
                 properties:
                   azure:
                     properties:
-                      secrets:
-                        properties:
-                          accountKey:
-                            type: string
-                          accountName:
-                            type: string
-                          container:
-                            type: string
-                        required:
-                        - accountKey
-                        - accountName
-                        - container
-                        type: object
+                      secretName:
+                        type: string
                     required:
-                    - secrets
+                    - secretName
                     type: object
                 type: object
             type: object
