Add Azure storage support (#49)
* Add Azure storage support

* move cr-azure to examples

* apply suggestions

* pass Azure secrets as secrets

* remove json info from azure secrets

* rename getSecret function

* remove example

--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -59,6 +59,16 @@ spec:
                 description: Sets the timeout for the Function health check. The default
                   value in seconds is `10`
                 type: string
+              storage:
+                properties:
+                  azure:
+                    properties:
+                      secretName:
+                        type: string
+                    required:
+                    - secretName
+                    type: object
+                type: object
             type: object
           status:
             properties:
@@ -154,6 +164,8 @@ spec:
                 - Ready
                 - Error
                 - Warning
+                type: string
+              storage:
                 type: string
             required:
             - served
