Use unified labels

--- a/config/operator/base/deployment/deployment.yaml
+++ b/config/operator/base/deployment/deployment.yaml
@@ -5,16 +5,14 @@ metadata:
   namespace: system
   labels:
     control-plane: operator
-    app.kubernetes.io/name: deployment
-    app.kubernetes.io/instance: dockerregistry-operator
+    app.kubernetes.io/instance: dockerregistry-operator-deployment
     app.kubernetes.io/component: operator
-    app.kubernetes.io/created-by: dockerregistry-operator
-    app.kubernetes.io/part-of: dockerregistry-operator
-    app.kubernetes.io/managed-by: kustomize
 spec:
   selector:
     matchLabels:
       control-plane: operator
+      app.kubernetes.io/component: operator
+      app.kubernetes.io/instance: dockerregistry-operator
   replicas: 1
   template:
     metadata:
@@ -22,6 +20,8 @@ spec:
         kubectl.kubernetes.io/default-container: manager
       labels:
         control-plane: operator
+        app.kubernetes.io/instance: dockerregistry-operator
+        app.kubernetes.io/component: operator
         sidecar.istio.io/inject: "false"
     spec:
       securityContext:
