--- a/config/operator/base/rbac/kustomization.yaml
+++ b/config/operator/base/rbac/kustomization.yaml
@@ -1,3 +1,16 @@
+patches:
+  - patch: |
+      - op: add
+        path: "/metadata/labels"
+        value: 
+          app.kubernetes.io/component: rbac
+          app.kubernetes.io/instance: dockerregistry-operator-role
+    target:
+      group: rbac.authorization.k8s.io
+      version: v1
+      kind: ClusterRole
+      name: operator-role
+
 resources:
 # All RBAC will be applied under this service account in
 # the deployment namespace. You may comment out this resource
@@ -7,4 +20,3 @@ resources:
 - service_account.yaml
 - role.yaml
 - role_binding.yaml
-
