--- a/config/operator/base/crd/kustomization.yaml
+++ b/config/operator/base/crd/kustomization.yaml
@@ -5,6 +5,10 @@ resources:
 - bases/operator.kyma-project.io_dockerregistries.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
+commonLabels:
+  app.kubernetes.io/component: operator
+  app.kubernetes.io/instance: dockerregistries.operator.kyma-project.io
+
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
 - kustomizeconfig.yaml
