--- a/config/operator/base/kustomization.yaml
+++ b/config/operator/base/kustomization.yaml
@@ -10,8 +10,11 @@ namePrefix: dockerregistry-
 
 # Labels to add to all resources and selectors.
 commonLabels:
-  app.kubernetes.io/component: dockerregistry-operator.kyma-project.io
-
+  kyma-project.io/module: dockerregistry-operator
+  app.kubernetes.io/name: dockerregistry-operator
+  app.kubernetes.io/version: "0.1.0"
+  app.kubernetes.io/part-of: dockerregistry-operator
+  app.kubernetes.io/managed-by: kustomize
 
 resources:
 - ./crd
