--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -156,7 +156,22 @@ spec:
                   - type
                   type: object
                 type: array
-              secretName:
+              internalAddresses:
+                description: InternalAccess contains the in-cluster access configuration
+                  of the DockerRegistry.
+                properties:
+                  addresses:
+                    description: PushAddress contains an address that can be used
+                      to push images to the registry from inside the cluster.
+                    type: string
+                  secretName:
+                    description: SecretName is the name of the Secret containing the
+                      addresses and auth methods.
+                    type: string
+                type: object
+              pullAddress:
+                description: PullAddress contains address kubernetes can use to pull
+                  images from the registry.
                 type: string
               served:
                 description: |-
@@ -178,6 +193,7 @@ spec:
                 - Warning
                 type: string
               storage:
+                description: Storage signifies the storage type of DockerRegistry.
                 type: string
             required:
             - served
