--- a/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
+++ b/config/operator/base/crd/bases/operator.kyma-project.io_dockerregistries.yaml
@@ -156,7 +156,7 @@ spec:
                   - type
                   type: object
                 type: array
-              internalAddresses:
+              internalAccess:
                 description: InternalAccess contains the in-cluster access configuration
                   of the DockerRegistry.
                 properties:
