--- a/config/operator/base/rbac/role.yaml
+++ b/config/operator/base/rbac/role.yaml
@@ -201,6 +201,27 @@ rules:
   - update
   - watch
 - apiGroups:
+  - networking.istio.io
+  resources:
+  - gateways
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - networking.istio.io
+  resources:
+  - virtualservices
+  verbs:
+  - create
+  - delete
+  - deletecollection
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - operator.kyma-project.io
   resources:
   - dockerregistries
