--- a/config/docker-registry/templates/secret.yaml
+++ b/config/docker-registry/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or (eq .Values.storage "azure") (eq .Values.storage "s3") (eq .Values.storage "swift") }}
+{{- if or (eq .Values.storage "azure") (eq .Values.storage "s3") (eq .Values.storage "swift") (eq .Values.storage "gcs")}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -26,6 +26,10 @@ data:
     {{- if and .Values.secrets.swift.username .Values.secrets.swift.password }}
   swiftUsername: {{ .Values.secrets.swift.username | b64enc | quote }}
   swiftPassword: {{ .Values.secrets.swift.password | b64enc | quote }}
+    {{- end }}
+  {{- else if eq .Values.storage "gcs" }}
+    {{- if .Values.secrets.gcs.key }}
+  gcsKeyFile: {{ .Values.secrets.gcs.key | b64enc | quote }}
     {{- end }}
   {{- end }}
   {{- end}}
