change_to_accountkey

--- a/config/docker-registry/templates/secret.yaml
+++ b/config/docker-registry/templates/secret.yaml
@@ -28,8 +28,8 @@ data:
   swiftPassword: {{ .Values.secrets.swift.password | b64enc | quote }}
     {{- end }}
   {{- else if eq .Values.storage "gcs" }}
-    {{- if .Values.secrets.gcs.key }}
-  gcsKeyFile: {{ .Values.secrets.gcs.key | b64enc | quote }}
+    {{- if .Values.secrets.gcs.accountkey }}
+  gcsKeyFile: {{ .Values.secrets.gcs.accountkey | b64enc | quote }}
     {{- end }}
   {{- end }}
   {{- end}}
