--- a/config/docker-registry/templates/secret.yaml
+++ b/config/docker-registry/templates/secret.yaml
@@ -29,7 +29,7 @@ data:
     {{- end }}
   {{- else if eq .Values.storage "gcs" }}
     {{- if .Values.secrets.gcs.accountkey }}
-  gcsKeyFile: {{ .Values.secrets.gcs.accountkey | b64enc | quote }}
+  keyfile.json: {{ .Values.secrets.gcs.accountkey | b64enc | quote }}
     {{- end }}
   {{- end }}
   {{- end}}
