--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -3,25 +3,30 @@ name: build (push)
 on:
   push:
     branches: [ "main", "release-*" ]
-    paths-ignore:
-      - 'docs/**'
-      - 'examples/**'
+    tags:
+      - '^v?\d+\.\d+\.\d+(?:-.*)?$'
 
 permissions:
   id-token: write # This is required for requesting the JWT token
   contents: read # This is required for actions/checkout
 
 jobs:
-  compute-tag:
+  compute-tags:
     runs-on: ubuntu-latest
     outputs:
-      tag: ${{ steps.get_tag.outputs.TAG }}
+      tags: ${{ steps.get_tag.outputs.TAGS }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Get the latest tag
         id: get_tag
-        run: echo ::set-output name=TAG::${{ github.sha }}
+        run: |
+          {
+            echo 'TAGS<<EOF'
+            echo "${{ github.sha }}"
+            echo "${{ github.ref_name}}"
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
 
   build-operator:
     needs: compute-tag
